Adicionado barra lateral de navegação

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -7,19 +7,26 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./components/header/Header.css">
     <link rel="stylesheet" href="./assets/css/Reset.css">
+    <link rel="stylesheet" href="components/menu/Menu.css">
+    <link rel="stylesheet" href="./assets/css/Dashboard.css">
     <title>Dasboard</title>
 </head>
 <body>
     <header>
     </header>
-
+    <main>
+    </main>
     <script>
         function settingsUser() {
             
         }
         $(function(){
             $("header").load("./components/header/Header.html");
+            $("main").load("./components/menu/Menu.html");
         });
+
+
+
     </script>
 </body>
 </html>
